--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <img src="media/whale.jpg" alt="" class="pd6-photo whale">
             <img src="media/pigeon.jpg" alt="" class="pd6-photo pigeon">
         </div>
+    <a href="#" class="Button">button</a>
 </body>
 
 </html>
